# vulkan_test

./: .env-example  .gitignore  .unix_env_example.cmake  CMakeLists.txt  Makefile  README.md  compile.sh  first_app.cpp  first_app.hpp  frame_info.hpp  input_controller.cpp  input_controller.hpp  main.cpp  simple_render_system.cpp  simple_render_system.hpp  unixBuild.sh  ve_camera.cpp  ve_camera.hpp  ve_descriptors.cpp  ve_descriptors.hpp  ve_device.cpp  ve_device.hpp  ve_game_object.cpp  ve_game_object.hpp  ve_model.cpp  ve_model.hpp  ve_normal_map.cpp  ve_normal_map.hpp  ve_pipeline.cpp  ve_pipeline.hpp  ve_renderer.hpp  ve_swap_chain.cpp  ve_swap_chain.hpp  ve_texture.cpp  ve_texture.hpp  ve_window.cpp  ve_window.hpp  windows_env_example.cmake
shaders/: cube_map.frag  cube_map.vert  outline_highlight_shader.frag  outline_highlight_shader.vert  pbr_shader.frag  pbr_shader.vert  point_light_shader.frag  point_light_shader.vert  shadow_shader.vert  simple_shader.frag  simple_shader.vert
src/: buffer.cpp  buffer.hpp  editor_gui.cpp  first_app.cpp  first_app.hpp  frame_info.hpp  input_controller.cpp  input_controller.hpp  outline_highlight_system.cpp  outline_highlight_system.hpp  point_light_system.cpp  point_light_system.hpp  scene_editor_gui.cpp  scene_editor_gui.hpp  shadow_render_system.cpp  shadow_render_system.hpp  simple_render_system.cpp  simple_render_system.hpp  tiny_gltf.cpp  utility.hpp  ve_camera.hpp  ve_descriptors.hpp  ve_device.cpp  ve_device.hpp  ve_game_object.cpp  ve_game_object.hpp  ve_imgui.cpp  ve_model.cpp  ve_model.hpp  ve_normal_map.cpp  (+6 more)
(+41 files in other folders)
